# pkg/proto/models.pb.gorm.go
@@ -24,7 +24,9 @@ type ClientORM struct {
 	Ogrn         string
 	OwnerFio     string
 	Quota        int64
+	TotalQuota   int64
 	UpdatedAt    int64
+	Users        []*ClientUserORM `gorm:"foreignKey:ClientId;references:Id"`
 }
 
 // TableName overrides the default tablename generated by GORM
@@ -45,11 +47,23 @@ func (m *Client) ToORM(ctx context.Context) (ClientORM, error) {
 	to.Id = m.Id
 	to.Name = m.Name
 	to.Quota = m.Quota
+	to.TotalQuota = m.TotalQuota
 	to.CreatedAt = m.CreatedAt
 	to.UpdatedAt = m.UpdatedAt
 	to.OwnerFio = m.OwnerFio
 	to.Inn = m.Inn
 	to.Ogrn = m.Ogrn
+	for _, v := range m.Users {
+		if v != nil {
+			if tempUsers, cErr := v.ToORM(ctx); cErr == nil {
+				to.Users = append(to.Users, &tempUsers)
+			} else {
+				return to, cErr
+			}
+		} else {
+			to.Users = append(to.Users, nil)
+		}
+	}
 	if posthook, ok := interface{}(m).(ClientWithAfterToORM); ok {
 		err = posthook.AfterToORM(ctx, &to)
 	}
@@ -69,11 +83,23 @@ func (m *ClientORM) ToPB(ctx context.Context) (Client, error) {
 	to.Id = m.Id
 	to.Name = m.Name
 	to.Quota = m.Quota
+	to.TotalQuota = m.TotalQuota
 	to.CreatedAt = m.CreatedAt
 	to.UpdatedAt = m.UpdatedAt
 	to.OwnerFio = m.OwnerFio
 	to.Inn = m.Inn
 	to.Ogrn = m.Ogrn
+	for _, v := range m.Users {
+		if v != nil {
+			if tempUsers, cErr := v.ToPB(ctx); cErr == nil {
+				to.Users = append(to.Users, &tempUsers)
+			} else {
+				return to, cErr
+			}
+		} else {
+			to.Users = append(to.Users, nil)
+		}
+	}
 	if posthook, ok := interface{}(m).(ClientWithAfterToPB); ok {
 		err = posthook.AfterToPB(ctx, &to)
 	}
@@ -105,11 +131,12 @@ type ClientWithAfterToPB interface {
 
 type ClientUserORM struct {
 	Client    *ClientORM `gorm:"foreignKey:ClientUserId;references:Id"`
-	ClientId  uint64
+	ClientId  *uint64
 	CreatedAt int64
 	Email     string
 	Id        uint64
 	Password  string
+	Role      string
 	UpdatedAt int64
 	Username  string
 }
@@ -130,12 +157,13 @@ func (m *ClientUser) ToORM(ctx context.Context) (ClientUserORM, error) {
 		}
 	}
 	to.Id = m.Id
-	to.ClientId = m.ClientId
 	to.Email = m.Email
 	to.CreatedAt = m.CreatedAt
 	to.UpdatedAt = m.UpdatedAt
 	to.Password = m.Password
 	to.Username = m.Username
+	to.Role = m.Role
+	to.ClientId = m.ClientId
 	if m.Client != nil {
 		tempClient, err := m.Client.ToORM(ctx)
 		if err != nil {
@@ -160,12 +188,13 @@ func (m *ClientUserORM) ToPB(ctx context.Context) (ClientUser, error) {
 		}
 	}
 	to.Id = m.Id
-	to.ClientId = m.ClientId
 	to.Email = m.Email
 	to.CreatedAt = m.CreatedAt
 	to.UpdatedAt = m.UpdatedAt
 	to.Password = m.Password
 	to.Username = m.Username
+	to.Role = m.Role
+	to.ClientId = m.ClientId
 	if m.Client != nil {
 		tempClient, err := m.Client.ToPB(ctx)
 		if err != nil {
@@ -434,7 +463,7 @@ func DefaultCreateClient(ctx context.Context, in *Client, db *gorm.DB) (*Client,
 			return nil, err
 		}
 	}
-	if err = db.Omit().Create(&ormObj).Error; err != nil {
+	if err = db.Omit().Preload("Users").Create(&ormObj).Error; err != nil {
 		return nil, err
 	}
 	if hook, ok := interface{}(&ormObj).(ClientORMWithAfterCreate_); ok {
@@ -584,12 +613,21 @@ func DefaultStrictUpdateClient(ctx context.Context, in *Client, db *gorm.DB) (*C
 			return nil, err
 		}
 	}
+	filterUsers := ClientUserORM{}
+	if ormObj.Id == 0 {
+		return nil, errors.EmptyIdError
+	}
+	filterUsers.ClientId = new(uint64)
+	*filterUsers.ClientId = ormObj.Id
+	if err = db.Where(filterUsers).Delete(ClientUserORM{}).Error; err != nil {
+		return nil, err
+	}
 	if hook, ok := interface{}(&ormObj).(ClientORMWithBeforeStrictUpdateSave); ok {
 		if db, err = hook.BeforeStrictUpdateSave(ctx, db); err != nil {
 			return nil, err
 		}
 	}
-	if err = db.Omit().Save(&ormObj).Error; err != nil {
+	if err = db.Omit().Preload("Users").Save(&ormObj).Error; err != nil {
 		return nil, err
 	}
 	if hook, ok := interface{}(&ormObj).(ClientORMWithAfterStrictUpdateSave); ok {
@@ -709,6 +747,10 @@ func DefaultApplyFieldMaskClient(ctx context.Context, patchee *Client, patcher *
 			patchee.Quota = patcher.Quota
 			continue
 		}
+		if f == prefix+"TotalQuota" {
+			patchee.TotalQuota = patcher.TotalQuota
+			continue
+		}
 		if f == prefix+"CreatedAt" {
 			patchee.CreatedAt = patcher.CreatedAt
 			continue
@@ -727,6 +769,10 @@ func DefaultApplyFieldMaskClient(ctx context.Context, patchee *Client, patcher *
 		}
 		if f == prefix+"Ogrn" {
 			patchee.Ogrn = patcher.Ogrn
+			continue
+		}
+		if f == prefix+"Users" {
+			patchee.Users = patcher.Users
 			continue
 		}
 	}
@@ -799,7 +845,7 @@ func DefaultCreateClientUser(ctx context.Context, in *ClientUser, db *gorm.DB) (
 			return nil, err
 		}
 	}
-	if err = db.Omit().Create(&ormObj).Error; err != nil {
+	if err = db.Omit().Preload("Users").Create(&ormObj).Error; err != nil {
 		return nil, err
 	}
 	if hook, ok := interface{}(&ormObj).(ClientUserORMWithAfterCreate_); ok {
@@ -963,7 +1009,7 @@ func DefaultStrictUpdateClientUser(ctx context.Context, in *ClientUser, db *gorm
 			return nil, err
 		}
 	}
-	if err = db.Omit().Save(&ormObj).Error; err != nil {
+	if err = db.Omit().Preload("Users").Save(&ormObj).Error; err != nil {
 		return nil, err
 	}
 	if hook, ok := interface{}(&ormObj).(ClientUserORMWithAfterStrictUpdateSave); ok {
@@ -1076,10 +1122,6 @@ func DefaultApplyFieldMaskClientUser(ctx context.Context, patchee *ClientUser, p
 			patchee.Id = patcher.Id
 			continue
 		}
-		if f == prefix+"ClientId" {
-			patchee.ClientId = patcher.ClientId
-			continue
-		}
 		if f == prefix+"Email" {
 			patchee.Email = patcher.Email
 			continue
@@ -1098,6 +1140,14 @@ func DefaultApplyFieldMaskClientUser(ctx context.Context, patchee *ClientUser, p
 		}
 		if f == prefix+"Username" {
 			patchee.Username = patcher.Username
+			continue
+		}
+		if f == prefix+"Role" {
+			patchee.Role = patcher.Role
+			continue
+		}
+		if f == prefix+"ClientId" {
+			patchee.ClientId = patcher.ClientId
 			continue
 		}
 		if !updatedClient && strings.HasPrefix(f, prefix+"Client.") {
@@ -1548,7 +1598,7 @@ func DefaultCreateDataRecognitionTask(ctx context.Context, in *DataRecognitionTa
 			return nil, err
 		}
 	}
-	if err = db.Omit().Create(&ormObj).Error; err != nil {
+	if err = db.Omit().Preload("Users").Create(&ormObj).Error; err != nil {
 		return nil, err
 	}
 	if hook, ok := interface{}(&ormObj).(DataRecognitionTaskORMWithAfterCreate_); ok {
@@ -1703,7 +1753,7 @@ func DefaultStrictUpdateDataRecognitionTask(ctx context.Context, in *DataRecogni
 			return nil, err
 		}
 	}
-	if err = db.Omit().Save(&ormObj).Error; err != nil {
+	if err = db.Omit().Preload("Users").Save(&ormObj).Error; err != nil {
 		return nil, err
 	}
 	if hook, ok := interface{}(&ormObj).(DataRecognitionTaskORMWithAfterStrictUpdateSave); ok {
